Fix post meta on mobile view

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
     width: 100%;
     height: auto;
     float: none;
-
+    margin-bottom: 20px;
   }
 
 }
